--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,6 +1,6 @@
 timezone = 9
 
-voicechannel = 
+voicechannel = 557134334994415626
 textchannel = 557136278651535380
 ladderchannel = 
 jungsanchannel = 
