--- a/test_setting.ini
+++ b/test_setting.ini
@@ -2,7 +2,7 @@ timezone = 9
 
 voicechannel = 678134609422188545
 textchannel = 678134506796089354
-ladderchannel = 
+ladderchannel = 680702539053924392
 jungsanchannel = 
 
 before_alert = 1
