--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,8 +1,8 @@
 timezone = 9
 
-voicechannel = 678134609422188545
-textchannel = 678134506796089354
-ladderchannel = 680702539053924392
+voicechannel = 684027892472348700
+textchannel = 684027760531865611
+ladderchannel = 
 jungsanchannel = 
 
 before_alert = 1
