--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,9 +1,10 @@
 timezone = 9
 
-voicechannel = 684027892472348700
-textchannel = 684027760531865611
+voicechannel = 
+textchannel = 
 ladderchannel = 
 jungsanchannel = 
+killchannel = 
 
 before_alert = 1
 before_alert1 = 5
