--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,15 +1,16 @@
 timezone = 9
 
-voicechannel = 684027892472348700
-textchannel = 684027760531865611
+voicechannel = 
+textchannel = 
 ladderchannel = 
 jungsanchannel = 
 killchannel = 
+racingchannel = 
 
 before_alert = 1
 before_alert1 = 5
 mungChk = 10
-delmungcnt = 10
+delmungcnt = 20
 
 bossInfoNum = 3
 
