--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,6 +1,6 @@
 timezone = 9
 
-voicechannel = 
+voicechannel = 684027892472348700
 textchannel = 684027760531865611
 ladderchannel = 
 jungsanchannel = 
